# baml-dgraph-patient-graph-example

./: .gitignore  .uv  DATABASE_QUERIES.md  Makefile  README.md  TODO.md  demo_workflow.py  env.example  pyproject.toml  quick_start.sh  setup.py  test_setup.py
baml_src/: clients.baml  main.baml  medical_models.baml
data/: flir-data.parquet
img/arrows/: fhir-patient-graph.json
medical-extraction/: demo_workflow.py
medical-extraction/scripts/: dgraph_importer.py
scripts/: add_embeddings.py  add_geo_locations.py  cleanup_invalid_uids.py  convert_coordinates_to_geo.py  debug_uid_issue.py  dgraph_importer.py  extract_medical_data.py  import_parquet_data.py  minimal_schema.py  run_with_uv.py  sample_medical_text.py  test_coordinate_conversion.py  test_duplicate_prevention.py  test_embeddings.py  test_geo_conversion.py  test_parquet_import.py  test_schema.py  test_schema_setup.py
